--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: default
 <a href="{{ site.baseurl }}/announcements">Announcements</a>
 </div>
 <div class='button -regular center'>
-<a href="{{ site.baseurl }}/semsubj">Notes</a>
+<a href="{{ site.baseurl }}/fullnav">Notes</a>
 </div>
 <div class='button -regular center'>
 <a href="{{ site.baseurl }}/connect">Connect</a>
