--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
   text-transform: none;
   text-transform: capitalize;
 
-  color: #fff;
+  color: #fef;
   border: 0 none;
   border-radius: 4px;
 
