--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ layout: default
   &:hover {
     transition: all 60ms ease;
 
-    opacity: .85;
+    opacity: .95;
   }
   
   &:active {
     transition: all 60ms ease;
-    opacity: .75;
+    opacity: .5;
   }
   
   &:focus {
@@ -82,7 +82,7 @@ layout: default
 <a href="{{ site.baseurl }}/announcements">Announcements</a>
 </div>
 <div class='button -regular center'>
-<a href="{{ site.baseurl }}/semsubj">Notes</a>
+<a href="{{ site.baseurl }}/fullnav">Notes</a>
 </div>
 <div class='button -regular center'>
 <a href="{{ site.baseurl }}/connect">Connect</a>
