--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@ layout: default
 
 <div class='button -regular center'>
 <a href="{{ site.baseurl }}/announcements">Announcements</a>
-</div>
-<div class='button -regular center'>
-<a href="{{ site.baseurl }}/notes>Notes</a>
+</div><div class='button -regular center'>
+<a href="{{ site.baseurl }}/ss">Notes</a>
 </div>
 <div class='button -regular center'>
 <a href="{{ site.baseurl }}/connect">Connect</a>
