--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ layout: default
   border: 0 none;
   border-radius: 4px;
 
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 600;
   line-height: 1.3;
 
   -webkit-appearance: none;
@@ -74,11 +74,38 @@ layout: default
     opacity: 1;
   }
 }
+
+.btn {
+  background: #c2c8cc;
+  background-image: -webkit-linear-gradient(top, #c2c8cc, #797e82);
+  background-image: -moz-linear-gradient(top, #c2c8cc, #797e82);
+  background-image: -ms-linear-gradient(top, #c2c8cc, #797e82);
+  background-image: -o-linear-gradient(top, #c2c8cc, #797e82);
+  background-image: linear-gradient(to bottom, #c2c8cc, #797e82);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 19px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #0e1112;
+  background-image: -webkit-linear-gradient(top, #0e1112, #344652);
+  background-image: -moz-linear-gradient(top, #0e1112, #344652);
+  background-image: -ms-linear-gradient(top, #0e1112, #344652);
+  background-image: -o-linear-gradient(top, #0e1112, #344652);
+  background-image: linear-gradient(to bottom, #0e1112, #344652);
+  text-decoration: none;
+}
 </style>
 
 <br><br>
 
-<div class='button -regular center'>
+<div class='btn center'>
 <a href="{{ site.baseurl }}/announcements">Announcements</a>
 </div><div class='button -regular center'>
 <a href="{{ site.baseurl }}/ss">Notes</a>
